# DatathonSunass

./: .env.example  .gitattributes  .gitignore  Makefile  README.md  pyproject.toml  run_app.bat  run_app.ps1
.streamlit/: config.toml
app/: Home.py  __init__.py
app/components/: __init__.py  auth.py  data_loader.py  kpi.py  theme.py
app/pages/: 0_Ejecutivo.py  1_Datos.py  2_EDA.py  3_Modelo.py  4_Forecasting.py  5_Alertas.py  6_Modo_Dia_D.py  7_Reportes.py  8_Mapa.py  9_Stream.py
artifacts/: incidents.json
config/: users.yaml
dashboard/: __init__.py
docker/: .dockerignore  Dockerfile  docker-compose.yml
docs/: ARQUITECTURA.md  HANDOFF_FABIAN.md  PAPERS_FORECASTING.md  PREPROCESSING_TASKS.md  SETUP_FABIAN.md
reports/: _quarto.yml  deck.qmd  references.bib
reports/_freeze/deck/execute-results/: html.json
reports/_site/: deck.html
reports/assets/: custom.scss
scripts/: run_pipeline.py  smoke_senamhi_features.py  smoke_setup.py
src/: __init__.py  eda.py  inspector.py  io.py  llm.py
src/modeling/: __init__.py  anomalias.py  clasificacion.py  features.py  forecasting.py
src/monitoring/: __init__.py  alerts.py  climate_thresholds.py  incidents.py  thresholds.py
src/rag/: __init__.py
src/reports/: __init__.py  export.py
src/viz/: __init__.py  eda.py
